[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://TruthTable.tscn" type="PackedScene" id=2]
[ext_resource path="res://YesNoDialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/down.png" type="Texture" id=10]
[ext_resource path="res://assets/up.png" type="Texture" id=11]

[node name="Main" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 69.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Topbar" type="HBoxContainer" parent="M"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 59.0

[node name="V" type="VBoxContainer" parent="M/Topbar"]
margin_right = 164.0
margin_bottom = 49.0
custom_constants/separation = 15

[node name="H" type="HBoxContainer" parent="M/Topbar/V"]
margin_right = 164.0
margin_bottom = 20.0
custom_constants/separation = 20

[node name="File" type="MenuButton" parent="M/Topbar/V/H"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"

[node name="Help" type="MenuButton" parent="M/Topbar/V/H"]
margin_left = 55.0
margin_right = 97.0
margin_bottom = 20.0
text = "Help"

[node name="Learn" type="Button" parent="M/Topbar/V/H"]
margin_left = 117.0
margin_right = 164.0
margin_bottom = 20.0
focus_mode = 0
text = "Learn"
flat = true

[node name="CurrentFile" type="Label" parent="M/Topbar/V"]
margin_top = 35.0
margin_right = 164.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0.698039, 0.698039, 0.698039, 1 )
align = 1

[node name="Left" type="Control" parent="M/Topbar"]
margin_left = 168.0
margin_right = 278.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="H" type="HBoxContainer" parent="M/Topbar"]
margin_left = 282.0
margin_right = 802.0
margin_bottom = 49.0
rect_min_size = Vector2( 520, 0 )
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Left" type="Control" parent="M/Topbar/H"]
margin_right = 230.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="Right" type="Control" parent="M/Topbar/H"]
margin_left = 230.0
margin_right = 460.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="Up" type="ToolButton" parent="M/Topbar/H"]
margin_left = 460.0
margin_right = 490.0
margin_bottom = 49.0
focus_mode = 0
icon = ExtResource( 11 )

[node name="Down" type="ToolButton" parent="M/Topbar/H"]
margin_left = 490.0
margin_right = 520.0
margin_bottom = 49.0
focus_mode = 0
icon = ExtResource( 10 )

[node name="Right" type="Control" parent="M/Topbar"]
margin_left = 806.0
margin_right = 861.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="TTSelect" type="CheckBox" parent="M/Topbar"]
margin_left = 865.0
margin_right = 1003.0
margin_bottom = 49.0
focus_mode = 0
text = "Select truth table"

[node name="Graph" type="GraphEdit" parent="."]
margin_top = 73.0
margin_right = 1024.0
margin_bottom = 768.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2( -896, -312 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="c" type="CanvasLayer" parent="."]

[node name="About" type="AcceptDialog" parent="c"]
margin_left = 686.0
margin_top = 382.0
margin_right = 940.0
margin_bottom = 457.0
window_title = "About"
dialog_text = "Created by Andrew Wilkes 2021

v1.14 - Able to load sub-circuits
"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Licences" type="AcceptDialog" parent="c"]
margin_left = 685.758
margin_top = 381.926
margin_right = 1701.76
margin_bottom = 1018.93
window_title = "About"
dialog_text = "Licence Information

This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2021 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

--------
FreeType

Portions of this software are copyright Â© 2021 The FreeType Project (www.freetype.org). All rights reserved.

--------
ENet
Godot includes the ENet library to handle high-level multiplayer.

Copyright (c) 2002-2020 Lee Salzman

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

---------
MBedTLS

For using SSL (usually through HTTP requests), the MBedTLS Apache license:

Copyright The Mbed TLS Contributors

Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.


"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert" type="AcceptDialog" parent="c"]
margin_top = 1022.0
margin_right = 200.0
margin_bottom = 1080.0
window_title = "Alert"
dialog_text = "Error loading data"

[node name="FileDialog" type="FileDialog" parent="c"]
margin_top = 950.0
margin_right = 600.0
margin_bottom = 1250.0
rect_min_size = Vector2( 600, 300 )
window_title = "Open a File"
resizable = true
mode = 0
access = 1
filters = PoolStringArray( "*.res ; Circuit files" )
show_hidden_files = true

[node name="TruthTable" parent="c" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1016.0
margin_right = 119.0
margin_bottom = 1080.0

[node name="YesNoDialog" parent="c" instance=ExtResource( 3 )]

[connection signal="tree_exiting" from="." to="." method="_on_Main_tree_exiting"]
[connection signal="pressed" from="M/Topbar/V/H/Learn" to="." method="_on_Learn_pressed"]
[connection signal="button_down" from="M/Topbar/H/Up" to="." method="_on_Up_button_down"]
[connection signal="button_down" from="M/Topbar/H/Down" to="." method="_on_Down_button_down"]
[connection signal="connection_request" from="Graph" to="." method="_on_Graph_connection_request"]
[connection signal="disconnection_request" from="Graph" to="." method="_on_Graph_disconnection_request"]
[connection signal="node_selected" from="Graph" to="." method="_on_Graph_node_selected"]
[connection signal="node_unselected" from="Graph" to="." method="_on_Graph_node_unselected"]
[connection signal="scroll_offset_changed" from="Graph" to="." method="_on_Graph_scroll_offset_changed"]
[connection signal="timeout" from="TestTimer" to="." method="_on_TestTimer_timeout"]
[connection signal="file_selected" from="c/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="c/FileDialog" to="." method="_on_FileDialog_popup_hide"]
[connection signal="test_pressed" from="c/TruthTable" to="." method="start_tests"]
[connection signal="no" from="c/YesNoDialog" to="." method="_on_YesNoDialog_no"]
[connection signal="yes" from="c/YesNoDialog" to="." method="_on_YesNoDialog_yes"]
